--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "adm-zip": "^0.5.10",
     "axios": "^1.3.4",
+    "command-line-args": "^6.0.1",
+    "command-line-usage": "^7.0.3",
     "csvtojson": "^2.0.10",
     "express": "^4.18.2",
     "jsdom": "^22.0.0",
